# aisd_wyklad

./: CMakeLists.txt  README.md
w02/: Insort.c  MergeSort.c  insort.c  liniowe.c
w03/: QuickSort.c  quickSort.c
w04/: HeapSort.c  MergeFiles.c  PriorityQueueAndHeap.c
w05/: List.java  lista.c
w06/: bst.h  stos.c  stos.h
w07/: zlicz.c
